# speedread

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  build_and_deploy.sh  conanfile.py  config.ini
.github/workflows/: build.yml
android/: AndroidManifest.xml.in
rcc/: rcc.qrc  rcc.sh
rcc/rcc/: book.txt  translation_ru.qm
src/: BookWidget.cpp  BookWidget.h  ControlWidget.cpp  ControlWidget.h  Language.cpp  Language.h  LastBooksWidget.cpp  LastBooksWidget.h  MainWidget.cpp  MainWidget.h  Settings.cpp  Settings.h  SettingsWidget.cpp  SettingsWidget.h  Theme.cpp  Theme.h  config.h.in  main.cpp  myclass.h
translations/: translation_en.ts  translation_ru.ts
